# wayland-session-restore

./: .gitignore  LICENSE  README.md  go.mod  hsr  pyproject.toml
.github/workflows/: ci.yml
cmd/hsr/: main.go
docs/plans/: 2026-07-13-hyprland-session-restore-go.md  2026-07-13-hyprland-session-restore.md
examples/: config.toml
internal/config/: config.go  config_test.go
internal/hypr/: hypr.go  hypr_test.go
internal/procfs/: procfs.go  procfs_test.go
internal/restore/: restore.go  restore_test.go
internal/snapshot/: snapshot.go  snapshot_test.go
src/hsr/: config.py  proc.py
systemd/: hyprland-session-restore.service  hyprland-session-restore.timer
tests/: test_config.py  test_proc.py
