[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hyprland-session-restore"
version = "0.1.0"
description = "Snapshot and restore Hyprland sessions: windows, workspaces, terminal cwds"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

[project.scripts]
hyprland-session-restore = "hsr.cli:main"
hsr = "hsr.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hsr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
